[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-contract = { path = "../cosmwasm/contracts/account", package = "account" }
base64 = "0.21.7"
cosmos-sdk-proto = "0.19.0"
cosmrs = { version = "0.14.0", features = ["dev", "cosmwasm"] }
k256 = "0.13.3"
tendermint = "0.32.2"
tokio = "1.35.1"
serde_json = "1.0.113"
hex = "0.4.3"

[patch.crates-io]
cosmwasm-schema = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.8.1" }
